tests/semantic_cases/invalid/assignment_string_literal.ob0
(* INVALID: string literals are only valid as WriteString arguments *)
MODULE Main;
VAR x: INTEGER;
BEGIN
  x := "Hello"
END Main.
